--- a/whoisthefirst/index.html
+++ b/whoisthefirst/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  kamikadze328 built the Who Is The First? app as
+                  kamikadze328 built the Who Is the First? app as
                   a Free app. This SERVICE is provided by
                   kamikadze328 at no cost and is intended for use as
                   is.
@@ -25,11 +25,11 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Who Is The First? unless otherwise defined in this Privacy Policy.
+                  Who Is the First? unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
-                  identifiable information, including but not limited to 6994921377664890302. The information that
+                  identifiable information. The information that
                   I request will be retained on your device and is not collected by me in any way.
                 </p> <div><p>
                     The app does use third party services that may collect
