--- a/whoisthefirst/test/index.html
+++ b/whoisthefirst/test/index.html
@@ -1,5 +1,5 @@
-0.2
-Любите играть в настолки? Ходите с друзьями в бар? Часами не можете выбрать сериал?
+<h1>0.2</h1>
+<div>Любите играть в настолки? Ходите с друзьями в бар? Часами не можете выбрать сериал?
 Попробуйте приложение "Кто первый?" и жизнь станет проще.
  Больше никаких споров и раздумий, приложение всё сделает за вас!
 С его помощью можно быстро определить:
@@ -16,3 +16,4 @@
 - выбор одного из многих.
 
 Сохраните нервы, положитесь на волю случая
+</div>
