--- a/test/index.html
+++ b/test/index.html
@@ -1,21 +1,20 @@
-<h1>0.2</h1>
 <div>
- Любите играть в настолки? Ходите с друзьями в бар? Часами не можете выбрать сериал? 
- <br/>
-Попробуйте приложение "Кто первый?" и жизнь станет проще.
- Больше никаких споров и раздумий, приложение всё сделает за вас!
-С его помощью можно быстро определить:
-- Кто начинает партию:
-&#129346; Кто платит в баре;
-- Кто выбирает сериал; 
-- И многое другое 
-
-Нужно лишь приложить к экрану пальцы.
-Это просто!
-
-Есть целых два режима:
-- генерация случайной очереди из участников;
-- выбор одного из многих.
-
-Сохраните нервы, положитесь на волю случая
+    Любите играть в настолки?<br/>
+    Ходите с друзьями в бар?<br/>
+    Часами не можете выбрать сериал? <br/>
+    <br/>
+    Попробуйте приложение "Кто первый?" и жизнь станет проще. Больше никаких споров и раздумий, приложение всё сделает
+    за вас! <br/>
+    <b>С его помощью можно быстро определить: </b><br/>
+    — Кто начинает партию &#127922;; <br/>
+    — Кто платит в кафе &#127869;; <br/>
+    — Кто выбирает сериал &#128250;; <br/>
+    — И многое другое &#10024;<br/>
+    Нужно лишь приложить к экрану пальцы. Это просто! <br/>
+    <br/>
+    <b>Есть целых два режима: </b><br/>
+    — Генерация случайной очереди из участников; <br/>
+    — выбор одного из многих. <br/>
+    <br/>
+    Сохраните нервы и положитесь на волю случая! <br/>
 </div>
