--- a/test/index.html
+++ b/test/index.html
@@ -9,12 +9,12 @@
     — Кто начинает партию &#127922;; <br/>
     — Кто платит в кафе &#127869;; <br/>
     — Кто выбирает сериал &#128250;; <br/>
-    — И многое другое &#10024;<br/>
+    — И многое другое &#10024;.<br/>
     Нужно лишь приложить к экрану пальцы. Это просто! <br/>
     <br/>
     <b>Есть целых два режима: </b><br/>
-    — Генерация случайной очереди из участников; <br/>
-    — выбор одного из многих. <br/>
+    — Генерация случайной очереди из участников &#127919;; <br/>
+    — выбор одного из многих &#129351;&#129352;&#129353;. <br/>
     <br/>
     Сохраните нервы и положитесь на волю случая! <br/>
 </div>
