--- a/developerslife/privacy_policy/index.html
+++ b/developerslife/privacy_policy/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  kamikadze328 built the Who Is the First? app as
+                  kamikadze328 built the Developers Life Mobile Client app as
                   a Free app. This SERVICE is provided by
                   kamikadze328 at no cost and is intended for use as
                   is.
